[package]
name = "iroha_config2"
version = "2.0.0-pre-rc.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroha_data_model.workspace = true
iroha_crypto.workspace = true
iroha_primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
